src/test/deca/syntax/valid/HelloWorld/DoubleComment-OOC.deca
// Description:
//    Comment with a sub comment which is lexically correct.
//
// Results:
//    empty tree
//
// History:
//    cree le 05/01/2022

/* foo /*
bar */
